# teamspeak-demo-plugin-cmake

./: .gitignore  CMakeLists.txt  plugin.cpp  plugin.h
include/teamspeak/: public_definitions.h
